# bevy-supabase

./: Cargo.toml  README.md
crates/bevy-gotrue/: Cargo.toml  README.md
crates/bevy-gotrue/examples/: email_password.rs  provider.rs
crates/bevy-gotrue/src/: api.rs  builder.rs  client.rs  lib.rs
crates/bevy-postgrest/: Cargo.toml  README.md
crates/bevy-postgrest/examples/: authed.rs
crates/bevy-postgrest/src/: api.rs  builder.rs  client.rs  filter.rs  lib.rs
crates/bevy-realtime/: Cargo.toml  README.md
crates/bevy-realtime/examples/: broadcast.rs  postgres.rs  postgres_authed.rs  presence.rs
crates/bevy-realtime/src/: broadcast.rs  channel.rs  client.rs  lib.rs  postgres_changes.rs  presence.rs
crates/bevy-realtime/src/internal/: channel.rs  client.rs  mod.rs  presence.rs
crates/bevy-realtime/src/internal/message/: payload.rs  postgres_change_filter.rs
crates/bevy-realtime/src/message/: mod.rs  payload.rs  realtime_message.rs
crates/bevy-supabase-auth/: Cargo.toml  README.md
crates/bevy-supabase-auth/examples/: email_password.rs
crates/bevy-supabase-postgrest/: Cargo.toml  README.md
crates/bevy-supabase-postgrest/examples/: authed_supabase.rs
crates/bevy-supabase-postgrest/src/: lib.rs
crates/bevy-supabase-realtime/: Cargo.toml  README.md
crates/bevy-supabase-realtime/examples/: broadcast.rs  postgres.rs  postgres_authed.rs  presence.rs
crates/bevy-supabase-realtime/src/: lib.rs  postgres_changes.rs  presence.rs
examples/: broadcast.rs  todo.rs
src/: lib.rs  prelude.rs
supabase/: config.toml
