[package]
name = "bevy-supabase"
version = "0.1.0"
edition = "2021"
categories = ["database"]
description = "supabase plugin for the bevy game engine"
exclude = ["crates/"]
keywords = ["game", "database", "gamedev", "supabase", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bytemunch/bevy-supabase"
homepage = "https://github.com/bytemunch/bevy-supabase"
documentation = "https://docs.rs/bevy-supabase"

[dependencies]
bevy_http_client = "0.5.1"
bevy = "0.13.2"
bevy-realtime = { git = "https://github.com/bytemunch/bevy-realtime" }
bevy-gotrue = { git = "https://github.com/bytemunch/bevy-gotrue" }
bevy-postgrest = { git = "https://github.com/bytemunch/bevy-postgrest" }

[dev-dependencies]
bevy_cosmic_edit = "0.20.0"
# bevy_cosmic_edit = { path = "../bevy_cosmic_edit" }
bevy_mod_debugdump = "0.10.0"
