[package]
name = "bevy-postgrest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
postgrest = "1.6.0"
tokio = { version = "1.36.0", features = ["rt"] }
bevy-gotrue = {path = "../bevy-gotrue/"}
reqwest = "0.11.24"

