[package]
name = "bevy-postgrest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
ehttp = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
url = "2.5.0"

[dev-dependencies]
bevy_http_client = "0.5.1"
bevy-gotrue = {path = "../bevy-gotrue/"}

