[package]
name = "bevy-realtime"
version = "0.1.0"
edition = "2021"
description = "bevy plugin for supabase realtime integration"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "supabase", "game", "messaging"]
repository = "https://github.com/bytemunch/bevy-supabase"
homepage = "https://github.com/bytemunch/bevy-supabase"
readme = "README.md"
documentation = "https://docs.rs/bevy-supabase-realtime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "crossbeam-deque"] }
native-tls = "0.2.11"
serde = "1.0.201"
serde_json = "1.0.113"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
bevy-gotrue = { path = "../bevy-gotrue/" }
bevy_http_client = "0.5.1"
